--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,3 +25,8 @@ moea_d:
 itlbo:
   num_teacher: 5
   adaptive_teaching_factor: [1,2]
+  generations: 100
+  mean_threshold: 0.75
+  teaching_factor: 0.75
+  mutation_rate: 0.5
+  interactive_threshold: 0.5
